nginx-deployment-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:  
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.15.10
        volumeMounts:
          - name: nginx-config
            mountPath: /etc/nginx/conf.d
          - name: nginx-html
            mountPath: /usr/share/nginx/better-html
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP              
        readinessProbe:
          httpGet:
            port: http
            path: /
        livenessProbe:
          httpGet:
            port: http
            path: /
          initialDelaySeconds: 60
          periodSeconds: 60
          timeoutSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
            items:
              - key: default-config
                path: default.conf
        - name: nginx-html
          configMap:
            name: nginx-html
