nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:  
  ports:
  - name: http
    port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
