nginx-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    ingress.kubernetes.io/force-ssl-redirect: "true"    
spec:
  tls:
  - secretName: nginx-tls
    hosts: 
    - nginx.dev.myday.cloud
  rules:
  - host: nginx.dev.myday.cloud
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 8080
